fixed tooltip issue

--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -570,6 +570,7 @@
     }
     .range-wrapr {
       margin: 0 30%;
+      padding-left: 11px;
       input[type="range"] {
         width: 279px;
         margin: 0 auto;
@@ -647,6 +648,7 @@
       }
       img.min-profile-pic {
         right: 10px;
+        margin-right: 11px;
       }
       img.max-profile-pic {
         left: 10px;
