--- a/src/styles/global/layout/_header.scss
+++ b/src/styles/global/layout/_header.scss
@@ -1,4 +1,8 @@
 header {
+  &.fixed {
+    position: fixed;
+    z-index: 1000 !important;
+  }
   margin-bottom: 10px;
   @include gradient();
   .navbar-default {
