--- a/src/styles/global/pages/_create-ad.scss
+++ b/src/styles/global/pages/_create-ad.scss
@@ -2,6 +2,143 @@
   background: #333;
   .ads-right-section {
     background: #333;
+    & > div:nth-child(1) {
+      background-color: white;
+    }
+    .create-campaign-crop-pic {
+      .range-wrapr {
+        background-color: white;
+        padding: 0 35px;
+        padding-bottom: 10px;
+        img.min-profile-pic.range-slider-pic {
+          top: 22px;
+        }
+        img.max-profile-pic {
+          top: 18px;
+        }
+        .range-slider-pic,
+        input[type="range"] {
+          float: left;
+        }
+        .range-slider-pic {
+          position: relative;
+        }
+        .runnable {
+          background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
+          width: 285px;
+          width: 0px;
+          height: 2px;
+          left: 29px;
+          top: 31px;
+          z-index: 1;
+        }
+        input[type="range"] {
+          width: 279px;
+          margin: 0 auto;
+          margin-top: 20px;
+          appearance: none;
+          -webkit-appearance: none;
+          position: relative;
+          overflow: hidden;
+          height: 20px;
+          cursor: pointer;
+          border-radius: 0;
+          padding: 0 5px 0 0;
+          margin-left: 12px;
+          margin-right: 14px;
+          /* iOS */
+          &:focus {
+            outline: none;
+          }
+          &::-webkit-slider-runnable-track {
+            height: 1.8px;
+            background: #ddd;
+          }
+          &::-ms-track {
+            background: #ddd;
+            color: transparent;
+            height: 1.8px;
+            border: none;
+          }
+          &::-moz-range-track {
+            height: 1.8px;
+            background: #ddd;
+          }
+          &::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            // box-shadow: -100vw 0 0 100vw red;
+            height: 20px;
+            width: 20px;
+            border-radius: 50%;
+            cursor: pointer;
+            background-image: radial-gradient(
+              circle at 0 100%,
+              #1f58a6,
+              #029bd7
+            );
+            position: relative;
+            top: -9px;
+          }
+          &::-moz-range-thumb {
+            // box-shadow: -100vw 0 0 100vw dodgerblue;
+            box-sizing: border-box;
+            height: 20px;
+            width: 20px;
+            border-radius: 50%;
+            cursor: pointer;
+            background-image: radial-gradient(
+              circle at 0 100%,
+              #1f58a6,
+              #029bd7
+            );
+            position: relative;
+            top: -8px;
+          }
+          &::-ms-thumb {
+            height: 20px;
+            width: 20px;
+            border-radius: 50%;
+            cursor: pointer;
+            background-image: radial-gradient(
+              circle at 0 100%,
+              #1f58a6,
+              #029bd7
+            );
+            position: relative;
+            top: -8px;
+          }
+          &::-ms-fill-lower {
+            background: red;
+            height: 10px;
+          }
+        }
+      }
+      .uploaded-profile-pic {
+        width: 100% !important;
+        min-height: 63% !important;
+        text-align: center;
+        margin-top: 0;
+        margin-bottom: 0 !important;
+        height: auto !important;
+        padding: 0;
+        & > div {
+          padding: 0;
+        }
+      }
+      .editor-canvas {
+        min-width: 43%;
+        min-height: 378px;
+        width: 100% !important;
+        height: 378px !important;
+        margin: 0px auto;
+      }
+    }
+    .add-wrapper {
+      img {
+        position: relative;
+        top: -35px;
+      }
+    }
   }
   .subtitle {
     font-size: 18px;
@@ -32,8 +169,9 @@
     display: flex;
     .box {
       background-color: #e9e9e9;
-      padding: 12.25rem 1.25rem;
+      padding: 15.25rem 1.25rem;
       text-align: center;
+      height: 378px;
       .inputfile {
         width: 0.1px;
         height: 0.1px;
