--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -721,3 +721,85 @@ section.loader-wrapr {
   text-align: center;
   font-size: 10px !important;
 }
+
+//comment and #tag
+.__react_component_tooltip.type-light.border {
+  border: 1px solid #777;
+  background: rgba(190, 190, 190, 0.5);
+  -webkit-overflow-scrolling: touch;
+  outline: 0;
+  text-align: center;
+  margin-left: -6px;
+  margin-top: 0px;
+  padding: 0px;
+  width: 340px;
+  opacity: 1;
+  cursor: pointer;
+  &::before,
+  &::after {
+    display: none;
+  }
+  & > div {
+    &.post-action-links {
+      width: 100% !important;
+    }
+    width: 100%;
+    text-align: left;
+    background: #9b9b9b;
+    & > div {
+      padding: 11px 0 10px 15px;
+      background-color: white;
+      margin-bottom: 1px;
+      font-size: 14px;
+      & > div:first-child {
+        color: #4a4a4a;
+        &.img-wrapr {
+          width: 45px;
+          height: 45px;
+          float: left;
+          margin-right: 10px;
+          img {
+            height: inherit !important;
+            width: inherit !important;
+            border-radius: 50%;
+            position: relative;
+          }
+        }
+      }
+      & > div:last-child {
+        color: #9b9b9b;
+        &.person-info-wrapr {
+          width: calc(100% - 50px);
+          .person-name {
+            font-family: "Helvetica-Bold";
+            color: #4a4a4a;
+          }
+        }
+      }
+    }
+    &.tag-person-wrapr {
+      .img-wrapr {
+        float: left;
+      }
+    }
+  }
+  .post-action-links {
+    background-color: transparent;
+    position: relative;
+    display: inline-block;
+    top: 40%;
+    width: 300px;
+    div {
+      display: block;
+      background: #ffffff;
+      color: #4a4a4a;
+      padding: 10px 40px;
+      text-align: center;
+      margin-bottom: 2px;
+      font-size: 12px;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
