worked on file upload css

--- a/src/styles/global/pages/_upload-img.scss
+++ b/src/styles/global/pages/_upload-img.scss
@@ -81,7 +81,9 @@
       }
     }
     .image-wrapper {
-      padding: 30px;
+      padding: 131px 30px;
+      text-align: center;
+      height: 435px;
       .progress-bar-wrapper {
         min-height: 435px;
         display: flex;
