--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -336,6 +336,9 @@ hr {
     }
   }
 }
+button:focus {
+  outline: 0;
+}
 .col-2 {
   margin: 0px -15px;
 }
@@ -734,6 +737,11 @@ section.loader-wrapr {
   padding: 0px;
   width: 340px;
   opacity: 1;
+  // margin-left: 70%;
+  // transition: all ease 0.3s;
+  //   &.show{
+  //     margin-left: 0;
+  //   }
   cursor: pointer;
   &::before,
   &::after {
