--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -484,10 +484,12 @@
       padding-right: 15px;
       img {
         width: 20px;
-        &[src="/global/picstagraph-web/images/comment.PNG"] {
+        &[src="/global/picstagraph-web/images/comment.PNG"],
+        &[src="/global/picstagraph-web/images/feed_msg.svg"] {
           transition: all ease 0.5s;
           -webkit-transition: all ease 0.5s;
           -moz-transition: all ease 0.5s;
+          position: relative;
           &:hover {
             animation: 0.5s 2 shakeMe;
             -webkit-animation: 0.5s 2 shakeMe;
@@ -674,12 +676,52 @@
 }
 @keyframes shakeMe {
   0% {
-    transform: rotate(-20deg);
+    top: 0px;
+  }
+  25% {
+    top: -5px;
   }
   50% {
-    transform: rotate(-0deg);
+    top: 0px;
+  }
+  75% {
+    top: 5px;
   }
   100% {
-    transform: rotate(20deg);
+    top: 0px;
+  }
+}
+@-webkit-keyframes shakeMe {
+  0% {
+    top: 0px;
+  }
+  25% {
+    top: -5px;
+  }
+  50% {
+    top: 0px;
+  }
+  75% {
+    top: 5px;
+  }
+  100% {
+    top: 0px;
+  }
+}
+@-moz-keyframes shakeMe {
+  0% {
+    top: 0px;
+  }
+  25% {
+    top: -5px;
+  }
+  50% {
+    top: 0px;
+  }
+  75% {
+    top: 5px;
+  }
+  100% {
+    top: 0px;
   }
 }
