--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -484,7 +484,8 @@
       padding-right: 15px;
       img {
         width: 20px;
-        &[src="/global/picstagraph-web/images/comment.PNG"] {
+        &[src="/global/picstagraph-web/images/comment.PNG"],
+        &[src="/global/picstagraph-web/images/feed_msg.svg"] {
           transition: all ease 0.5s;
           -webkit-transition: all ease 0.5s;
           -moz-transition: all ease 0.5s;
