css fix for ikage upload

--- a/src/styles/global/pages/_create-ad.scss
+++ b/src/styles/global/pages/_create-ad.scss
@@ -294,11 +294,7 @@
           border: 12px solid #fff;
           position: absolute;
           top: 0;
-          left: 0;
-          // content: "";
-          // width: 70%;
-          // height: 70%;
-          // border-radius: 50%;
+          left: 0; // content: ""; // width: 70%; // height: 70%; // border-radius: 50%;
           // border: 12px solid #fff;
           // position: absolute;
           // top: 15%;
@@ -360,8 +356,7 @@
         }
         &.blue {
           .progress-bar {
-            border-color: #049dff;
-            // background: radial-gradient(circle at 0 100%, #1f58a6, #029bd7)
+            border-color: #049dff; // background: radial-gradient(circle at 0 100%, #1f58a6, #029bd7)
           }
           .progress-left {
             .progress-bar {
