--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -1,6 +1,5 @@
 .create-campaign-modal {
   background: #333;
-
   &.editor-modal {
     & > .modal-dialog {
       max-width: 915px;
@@ -8,11 +7,16 @@
   }
   .modal-dialog {
     width: 915px;
+    height: 80vh;
+    min-height: 80vh;
+    margin: 10vh auto;
+    background-color: white;
   }
   .modal-content {
     @include float();
     box-shadow: none;
     border: 0px;
+    height: 100%;
   }
   .modal-header {
     border-bottom: 6px solid #333333;
@@ -29,6 +33,15 @@
   }
   .modal-body {
     display: flex;
+    height: 100%;
+    .col-xs-12.no-padding {
+      .col-xs-12.no-padding {
+        height: 100%;
+        & > div {
+          height: 100%;
+        }
+      }
+    }
     .right-side {
       background-color: #333333;
       .create-campaign-crop-pic {
@@ -47,6 +60,7 @@
     }
     .create-campaign-feed-wrapper {
       padding: 40px;
+      height: 91%;
       .feed_wrapper {
         border: 1px solid $silver_color;
       }
@@ -97,6 +111,7 @@
       }
     }
     .upload-form {
+      height: 100%;
       &.height100 {
         height: 100%;
       }
@@ -387,6 +402,7 @@
     .create-campaign-wrapper {
       padding: 20px 30px;
       padding: 20px 10px;
+      height: 100%;
       p {
         margin-bottom: 25px;
       }
@@ -480,6 +496,8 @@
       padding: 20px;
       list-style: none;
       min-height: 450px;
+      height: 450px;
+      height: 91%;
       float: left;
       border-left: 6px solid #333333;
       background: #e9e9e9;
