--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -33,7 +33,7 @@
   }
   .modal-body {
     display: flex;
-    height: 100%;
+    height: 91%;
     .col-xs-12.no-padding {
       .col-xs-12.no-padding {
         height: 100%;
@@ -205,7 +205,7 @@
         border: 0px;
         img {
           position: relative;
-          top: -35px;
+          top: -44%;
         }
       }
     }
@@ -497,7 +497,7 @@
       list-style: none;
       min-height: 450px;
       height: 450px;
-      height: 91%;
+      height: 100%;
       float: left;
       border-left: 6px solid #333333;
       background: #e9e9e9;
@@ -613,7 +613,7 @@
     div.edit-profile-pic,
     div.uploaded-profile-pic {
       width: 100% !important;
-      min-height: 63% !important;
+      min-height: 53% !important;
       text-align: center;
       margin-top: 46px;
       height: auto !important;
