worked on modal css revert back changes 12/11/18

--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -418,16 +418,18 @@ button:focus {
 }
 .overflow-scroll {
   .modal-dialog {
-    height: 80vh;
-    min-height: 80vh;
-    margin: 10vh auto;
-    background-color: white;
+    //reverting back
+    // height: 80vh;
+    // min-height: 80vh;
+    // margin: 10vh auto;
+    height: 92%;
+    // background-color: white;
     .modal-content {
       height: 100%;
       overflow: hidden;
 
       .modal-body {
-        height: 91%;
+        height: 92%;
         .modal-body {
           height: 100%;
           .upload-form {
@@ -441,7 +443,7 @@ button:focus {
 }
 .overflow-scroll {
   .modal-dialog {
-    height: 91%;
+    height: 92%;
     .modal-content {
       height: 100%;
       overflow: hidden;
