--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -7,10 +7,11 @@
   }
   .modal-dialog {
     width: 915px;
-    height: 80vh;
-    min-height: 80vh;
-    margin: 10vh auto;
-    background-color: white;
+    //reverting back
+    // height: 80vh;
+    // min-height: 80vh;
+    // margin: 10vh auto;
+    // background-color: white;
   }
   .modal-content {
     @include float();
@@ -34,21 +35,24 @@
   .modal-body {
     display: flex;
     height: 91%;
-    &.height100 {
-      height: 100%;
-    }
-    .col-xs-12.no-padding {
-      .col-xs-12.no-padding {
-        height: 100%;
-        & > div {
-          height: 100%;
-          overflow: auto;
-          &:nth-child(2) {
-            // height: auto;
-          }
-        }
-      }
-    }
+    // height: 100%;
+    //reverting back
+    // &.height100 {
+    //   height: 100%;
+    // }
+    // .col-xs-12.no-padding {
+    //   .col-xs-12.no-padding {
+    //     // height: 100%;
+    //     & > div {
+    //       // height: 100%;
+    //       // overflow: auto;
+    //       //reverting back
+    //       // &:nth-child(2) {
+    //       //   // height: auto;
+    //       // }
+    //     }
+    //   }
+    // }
     .right-side {
       background-color: #333333;
       .create-campaign-crop-pic {
@@ -67,7 +71,8 @@
     }
     .create-campaign-feed-wrapper {
       padding: 40px;
-      height: 91%;
+      //reverting back
+      // height: 91%;
       .feed_wrapper {
         border: 1px solid $silver_color;
       }
@@ -118,9 +123,11 @@
       }
     }
     .upload-form {
-      height: 100%;
+      //reverting back
+      // height: 100%;
       background-color: white;
       overflow: auto;
+      // height: -webkit-fill-available;
       &.height100 {
         height: 100%;
         background-color: white;
@@ -220,6 +227,8 @@
         img {
           position: relative;
           top: -44%;
+          //reverting back
+          top: -35px;
         }
       }
     }
@@ -416,7 +425,8 @@
     .create-campaign-wrapper {
       padding: 20px 30px;
       padding: 20px 10px;
-      height: 100%;
+      // reverting back
+      // height: 100%;
       p {
         margin-bottom: 25px;
       }
@@ -510,8 +520,10 @@
       padding: 20px;
       list-style: none;
       min-height: 450px;
-      height: 450px;
-      height: 100%;
+      // height: 450px;
+      // height: 100%;
+      // reverting back
+      height: 91%;
       float: left;
       border-left: 6px solid #333333;
       background: #e9e9e9;
@@ -627,7 +639,8 @@
     div.edit-profile-pic,
     div.uploaded-profile-pic {
       width: 100% !important;
-      min-height: 53% !important;
+      // reverting back
+      min-height: 63% !important;
       text-align: center;
       margin-top: 46px;
       height: auto !important;
