--- a/src/styles/global/pages/_create-ad.scss
+++ b/src/styles/global/pages/_create-ad.scss
@@ -173,6 +173,9 @@
   .modal-body {
     padding: 0px;
     display: flex;
+    .col-xs-12 {
+      height: 100%;
+    }
     .box {
       background-color: #e9e9e9;
       padding: 15.25rem 1.25rem;
@@ -215,6 +218,7 @@
       // reverting back
       // height: 73vh;
       // height: -webkit-fill-available;
+      height: 100%;
       overflow: auto;
       .full-width-input-wrapper {
         width: 100%;
@@ -361,8 +365,7 @@
         }
         &.blue {
           .progress-bar {
-            border-color: #049dff;
-            // background: radial-gradient(circle at 0 100%, #1f58a6, #029bd7)
+            border-color: #049dff; // background: radial-gradient(circle at 0 100%, #1f58a6, #029bd7)
           }
           .progress-left {
             .progress-bar {
