fixed modal right side css

--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -63,7 +63,7 @@
       }
     }
     .right-side {
-      background-color: #333333;
+      // background-color: #333333;
       .create-campaign-crop-pic {
         .edit-profile-pic {
           margin-top: 0;
