--- a/src/styles/global/pages/_information.scss
+++ b/src/styles/global/pages/_information.scss
@@ -1,3 +1,8 @@
+.info-main-title {
+  font-size: 20px;
+  margin-bottom: 0px;
+  padding: 30px 30px 0 30px;
+}
 .information-wrapper {
   background: $white_color;
   margin-bottom: 30px;
@@ -5,6 +10,8 @@
     padding: 25px 30px 0px 30px;
   }
   @include float();
+  height: calc(100vh - 100px);
+  overflow: auto;
   .feed_header {
     padding: 0px;
     margin-bottom: 24px;
@@ -12,10 +19,7 @@
       padding: 0px;
     }
   }
-  .info-main-title {
-    font-size: 20px;
-    margin-bottom: 38px;
-  }
+
   .text {
     font-size: 16px;
     line-height: 25px;
