--- a/src/styles/global/helpers/_common.scss
+++ b/src/styles/global/helpers/_common.scss
@@ -75,6 +75,12 @@ body {
 .padding-b-25 {
   padding-bottom: 25px;
 }
+.margin-left-20 {
+  margin-left: 20px;
+}
+.margin-top-10 {
+  margin-top: 10px;
+}
 .margin-bottom-50 {
   margin-bottom: 50px;
 }
