--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -49,7 +49,7 @@
     // &.height100 {
     //   height: 100%;
     // }
-    .col-xs-12.no-padding {
+    & > div {
       .col-xs-12.no-padding {
         height: 100%;
         & > div {
@@ -133,7 +133,7 @@
     }
     .upload-form {
       //reverting back
-      // height: 100%;
+      height: 100%;
       // height: calc(100vh - 125px);
       background-color: white;
       overflow: auto;
