--- a/src/styles/global/pages/_information.scss
+++ b/src/styles/global/pages/_information.scss
@@ -19,7 +19,20 @@
       padding: 0px;
     }
   }
-
+  textarea.form-control {
+    max-width: 100%;
+    min-width: 100%;
+    max-height: 50px;
+    min-height: 30px;
+    height: 30px;
+    resize: none;
+    overflow: hidden;
+    &:focus {
+      border-color: #000;
+      box-shadow: none;
+      outline: none;
+    }
+  }
   .text {
     font-size: 16px;
     line-height: 25px;
@@ -27,7 +40,7 @@
   }
   img {
     width: 100%;
-    margin-bottom: 15px;
+    // margin-bottom: 15px;
   }
   button {
     width: 100%;
@@ -47,10 +60,12 @@
       padding: 10px 30px;
       img {
         width: 45px;
+        margin-bottom: 0px;
       }
       .emoji_wrapper {
         img {
           width: 20px;
+          padding-top: 16px;
         }
       }
       .profile_image {
@@ -59,8 +74,20 @@
       }
       .comment-content {
         p {
-          padding-left: 60px;
+          padding-left: 70px;
         }
+      }
+      .show_more_options {
+        position: relative;
+        a {
+          position: absolute;
+          width: 30px;
+          top: 24px;
+          right: 0;
+        }
+      }
+      .commenter-info {
+        padding-top: 8px !important;
       }
     }
     .view-more-comments {
