--- a/html-design/html/css/pages/_home.scss
+++ b/html-design/html/css/pages/_home.scss
@@ -379,7 +379,7 @@
 	    	}
 	    	.show_more_options{
     			padding-right: 5px;
-				text-align: right;
+				text-align: right;;
 				a{
 					color:$charcoal_color;
 				}
