implemented campaign list with redux for the feeda

--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -316,7 +316,7 @@
 }
 .right_bar {
   width: 30%;
-  float: left;
+  float: right;
   .normal_title {
     margin-bottom: 3px;
     background-color: $white_color;
