--- a/src/styles/global/pages/_create-ad.scss
+++ b/src/styles/global/pages/_create-ad.scss
@@ -10,6 +10,9 @@
         background-color: white;
         padding: 0 35px;
         padding-bottom: 10px;
+        @media (max-width: 915px) {
+          padding: 0 2px;
+        }
         img.min-profile-pic.range-slider-pic {
           top: 22px;
         }
@@ -22,6 +25,16 @@
         }
         .range-slider-pic {
           position: relative;
+        }
+        img.min-profile-pic {
+          @media (max-width: 915px) {
+            right: -7px;
+          }
+        }
+        img.max-profile-pic {
+          @media (max-width: 915px) {
+            left: -13px;
+          }
         }
         .runnable {
           background-image: radial-gradient(circle at 0 100%, #1f58a6, #029bd7);
@@ -137,6 +150,14 @@
       img {
         position: relative;
         top: -35px;
+        @media (max-width: 915px) {
+          top: -24px;
+          margin-right: 2px !important;
+        }
+        @media (max-width: 785px) {
+          top: -23px;
+          width: 25px !important;
+        }
       }
     }
   }
@@ -152,6 +173,10 @@
     // min-height: 80vh;
     // margin: 10vh auto;
     // background-color: white;
+    @media (max-width: 915px) {
+      width: calc(100% - 4%);
+      margin: 30px 2%;
+    }
   }
   .modal-content {
     float: left;
@@ -365,7 +390,8 @@
         }
         &.blue {
           .progress-bar {
-            border-color: #049dff; // background: radial-gradient(circle at 0 100%, #1f58a6, #029bd7)
+            border-color: #049dff;
+            // background: radial-gradient(circle at 0 100%, #1f58a6, #029bd7)
           }
           .progress-left {
             .progress-bar {
