--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -3,6 +3,10 @@
   &.editor-modal {
     & > .modal-dialog {
       max-width: 915px;
+      @media (max-width: 915px) {
+        width: calc(100% - 4%);
+        margin: 30px 2%;
+      }
       .rdw-editor-wrapper {
         .rdw-editor-main {
           box-sizing: border-box;
@@ -21,6 +25,10 @@
     // min-height: 80vh;
     // margin: 10vh auto;
     // background-color: white;
+    @media (max-width: 915px) {
+      width: calc(100% - 4%);
+      margin: 30px 2%;
+    }
   }
   .modal-content {
     @include float();
@@ -33,6 +41,20 @@
     .modal-title {
       font-family: "Helvetica-Bold";
       margin-top: 7px;
+      @media (max-width: 915px) {
+        width: 30%;
+        & ~ .text-right {
+          width: 70%;
+        }
+      }
+      @media (max-width: 767px) {
+        width: 150px;
+        float: left;
+        & ~ .text-right {
+          width: calc(100% - 152px);
+          float: left;
+        }
+      }
     }
     button {
       height: 35px;
@@ -245,6 +267,10 @@
           top: -44%;
           //reverting back
           top: -35px;
+          @media (max-width: 915px) {
+            top: -32px;
+            right: -4px;
+          }
         }
       }
     }
@@ -677,6 +703,9 @@
         margin: 0;
         width: -webkit-fill-available;
         padding: 0 40px;
+        @media (max-width: 915px) {
+          padding: 0 5px;
+        }
       }
       input[type="range"] {
         width: 279px;
@@ -757,10 +786,16 @@
         right: 10px;
         margin-right: 11px;
         top: 22px;
+        @media (max-width: 915px) {
+          right: -5px;
+        }
       }
       img.max-profile-pic {
         left: 10px;
         top: 18px;
+        @media (max-width: 915px) {
+          left: 3px;
+        }
       }
       .runnable {
         position: relative;
