--- a/src/styles/global/pages/_information.scss
+++ b/src/styles/global/pages/_information.scss
@@ -36,7 +36,10 @@
   .text {
     font-size: 16px;
     line-height: 25px;
-    margin-bottom: 15px;
+    margin-bottom: 20px;
+    &.paddTop20 {
+      padding-top: 20px;
+    }
   }
   img {
     width: 100%;
