--- a/src/styles/global/pages/_create-ad.scss
+++ b/src/styles/global/pages/_create-ad.scss
@@ -41,6 +41,7 @@
           width: 285px;
           width: 0px;
           height: 2px;
+          position: relative;
           left: 29px;
           top: 31px;
           z-index: 1;
@@ -149,7 +150,7 @@
     .add-wrapper {
       img {
         position: relative;
-        top: -35px;
+        top: -57px;
         @media (max-width: 915px) {
           top: -24px;
           margin-right: 2px !important;
@@ -158,6 +159,14 @@
           top: -23px;
           width: 25px !important;
         }
+      }
+      input[type="file"] {
+        position: relative;
+        top: -35px;
+        right: -83%;
+        height: 23px;
+        opacity: 0;
+        z-index: 1;
       }
     }
   }
@@ -390,8 +399,7 @@
         }
         &.blue {
           .progress-bar {
-            border-color: #049dff;
-            // background: radial-gradient(circle at 0 100%, #1f58a6, #029bd7)
+            border-color: #049dff; // background: radial-gradient(circle at 0 100%, #1f58a6, #029bd7)
           }
           .progress-left {
             .progress-bar {
