--- a/src/styles/global/pages/_home.scss
+++ b/src/styles/global/pages/_home.scss
@@ -456,6 +456,7 @@
         cursor: auto;
         width: 45px;
         height: 45px;
+
         &.profile_pic_gray {
           height: 35px;
           width: 35px;
@@ -481,9 +482,9 @@
           -moz-animation: 0.5s heartBit;
         }
         &[src="/global/picstagraph-web/images/feed_like.svg"] {
-          animation: 0.7s NoheartBit;
-          -webkit-animation: 0.7s NoheartBit;
-          -moz-animation: 0.7s NoheartBit;
+          animation: 0.5s NoheartBit;
+          -webkit-animation: 0.5s NoheartBit;
+          -moz-animation: 0.5s NoheartBit;
         }
       }
     }
@@ -559,9 +560,9 @@
           -moz-animation: 0.5s heartBit;
         }
         &[src="/global/picstagraph-web/images/feed_like.svg"] {
-          animation: 0.7s NoheartBit;
-          -webkit-animation: 0.7s NoheartBit;
-          -moz-animation: 0.7s NoheartBit;
+          animation: 0.5s NoheartBit;
+          -webkit-animation: 0.5s NoheartBit;
+          -moz-animation: 0.5s NoheartBit;
         }
       }
     }
@@ -663,9 +664,15 @@
 
 @keyframes heartBit {
   0% {
-    transform: scale(1);
+    transform: scale(0.8);
+  }
+  25% {
+    transform: scale(0.7);
   }
   50% {
+    transform: scale(1);
+  }
+  75% {
     transform: scale(1.3);
   }
   100% {
@@ -674,10 +681,16 @@
 }
 @-webkit-keyframes heartBit {
   0% {
-    -webkit-transform: scale(1);
+    -webkit-transform: scale(0.8);
+  }
+  25% {
+    transform: scale(0.7);
   }
   50% {
     -webkit-transform: scale(1.3);
+  }
+  75% {
+    transform: scale(1.3);
   }
   100% {
     -webkit-transform: scale(1);
@@ -685,10 +698,16 @@
 }
 @-moz-keyframes heartBit {
   0% {
-    -moz-transform: scale(1);
+    -moz-transform: scale(0.8);
+  }
+  25% {
+    transform: scale(0.7);
   }
   50% {
     -moz-transform: scale(1.3);
+  }
+  75% {
+    transform: scale(1.3);
   }
   100% {
     -moz-transform: scale(1);
@@ -696,9 +715,15 @@
 }
 @keyframes NoheartBit {
   0% {
+    transform: scale(1);
+  }
+  25% {
     transform: scale(1.3);
   }
   50% {
+    transform: scale(1);
+  }
+  75% {
     transform: scale(0.7);
   }
   100% {
@@ -707,24 +732,36 @@
 }
 @-webkit-keyframes NoheartBit {
   0% {
-    -webkit-transform: scale(1.3);
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.3);
   }
   50% {
-    -webkit-transform: scale(0.7);
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(0.7);
   }
   100% {
-    -webkit-transform: scale(1);
+    transform: scale(1);
   }
 }
 @-moz-keyframes NoheartBit {
   0% {
-    -moz-transform: scale(1.3);
+    transform: scale(1);
+  }
+  25% {
+    transform: scale(1.3);
   }
   50% {
-    -moz-transform: scale(0.7);
+    transform: scale(1);
+  }
+  75% {
+    transform: scale(0.7);
   }
   100% {
-    -moz-transform: scale(1);
+    transform: scale(1);
   }
 }
 @keyframes shakeMe {
