--- a/src/styles/global/pages/_information.scss
+++ b/src/styles/global/pages/_information.scss
@@ -2,6 +2,9 @@
   font-size: 20px;
   margin-bottom: 0px;
   padding: 30px 30px 0 30px;
+  &.paddindLeft0 {
+    padding: 30px 30px 0 0px;
+  }
 }
 .information-wrapper {
   background: $white_color;
