create campaign css

--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -156,10 +156,11 @@
     .upload-form {
       //reverting back
       height: 100%;
-      // height: calc(100vh - 125px);
       background-color: white;
       overflow: auto;
-
+      @media (max-height: 650px) {
+        height: calc(100vh - 65px);
+      }
       // height: -webkit-fill-available;
       &.height100 {
         height: 100%;
