--- a/html-design/html/css/pages/_home.scss
+++ b/html-design/html/css/pages/_home.scss
@@ -18,7 +18,8 @@
     	display: inline-block;
     	float: right;
     	img{
-    		width: 20px;
+			width: 20px;
+			margin-left: 10px;
     	}
     }
     .slot_one, .slot_two, .slot_three{
