--- a/src/styles/global/pages/_create-campaign.scss
+++ b/src/styles/global/pages/_create-campaign.scss
@@ -244,6 +244,23 @@
       }
       .no-margin {
         margin: 0px;
+        label.dispInline {
+          width: calc(100% - 30px);
+          float: left;
+        }
+        .check-wrapr {
+          height: 20px;
+          width: 20px;
+          background: black;
+          float: left;
+          border-radius: 50%;
+          img {
+            position: relative;
+            bottom: 0;
+            right: 0;
+            height: 13px;
+          }
+        }
       }
     }
     .add-wrapper {
