--- a/src/styles/global/pages/_pics.scss
+++ b/src/styles/global/pages/_pics.scss
@@ -7,6 +7,11 @@
   padding-left: 5px;
 }
 .pic-block {
+  &.gray_content {
+    img {
+      min-height: 276px;
+    }
+  }
   img {
     width: 100%;
   }
@@ -23,6 +28,18 @@
     .name-wrapper {
       @include gradient();
       color: $white_color;
+      &.gray_box {
+        background-image: radial-gradient(circle at 0 100%, #d3d3d3, #e2e2e2);
+        background-color: #d3d3d3;
+        color: black;
+      }
+    }
+  }
+  .name-wrapper {
+    &.gray_box {
+      background-color: #d3d3d3;
+      padding: 20px;
+      margin: 10px 0;
     }
   }
 }
