implementation of share modal and fixed eslint issue

--- a/src/styles/global/pages-backup/_home.scss
+++ b/src/styles/global/pages-backup/_home.scss
@@ -30,6 +30,13 @@
   .settings {
     display: inline-block;
     float: right;
+
+    .share-wrapr {
+      img {
+        width: 20px;
+        margin-left: 10px;
+      }
+    }
     img {
       width: 20px;
     }
